fix alignment, favicon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4704,3 +4704,19 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
     top: -15px;
 }
 
+
+@media only screen and (max-width: 600px) {
+	.tablerow{
+		margin-left:0;
+		width:100%
+	}
+	.desktoponly{
+		display:none;
+	}
+}
+@media screen and (min-width: 601px) {
+	.tablerow{
+		width:50%;
+		margin:auto;
+	}
+}
